Apply auto-formatters (#391)
* Apply auto-formatters

* Apply auto-formatters

* revert pre-commit changes

* Revert "revert pre-commit changes"

This reverts commit fad4b172c56eefe0930e829b3f52b08687431c7e.

* Revert "Apply auto-formatters"

This reverts commit 32b06a64bb5d6046ca6de97d223bb6c47ec5413b.

* try again

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

---------
