# kernel_gateway/jupyter_websocket/swagger.json
@@ -9,12 +9,8 @@
       "url": "https://jupyter.org"
     }
   },
-  "produces": [
-    "application/json"
-  ],
-  "consumes": [
-    "application/json"
-  ],
+  "produces": ["application/json"],
+  "consumes": ["application/json"],
   "parameters": {
     "kernel": {
       "name": "kernel_id",
@@ -59,9 +55,7 @@
     "/api": {
       "get": {
         "summary": "Get API info",
-        "tags": [
-          "api"
-        ],
+        "tags": ["api"],
         "responses": {
           "200": {
             "description": "Returns information about the API",
@@ -74,13 +68,9 @@
     },
     "/api/swagger.yaml": {
       "get": {
-        "produces": [
-          "text/x-yaml"
-        ],
+        "produces": ["text/x-yaml"],
         "summary": "Get API info",
-        "tags": [
-          "api"
-        ],
+        "tags": ["api"],
         "responses": {
           "200": {
             "description": "Returns a swagger specification in yaml"
@@ -91,9 +81,7 @@
     "/api/swagger.json": {
       "get": {
         "summary": "Get API info",
-        "tags": [
-          "api"
-        ],
+        "tags": ["api"],
         "responses": {
           "200": {
             "description": "Returns a swagger specification in json"
@@ -104,9 +92,7 @@
     "/api/kernelspecs": {
       "get": {
         "summary": "Get kernel specs",
-        "tags": [
-          "kernelspecs"
-        ],
+        "tags": ["kernelspecs"],
         "responses": {
           "200": {
             "description": "Returns the available kernel specs to spawn new kernels.",
@@ -132,9 +118,7 @@
     "/api/kernels": {
       "get": {
         "summary": "List the JSON data for all currently running kernels",
-        "tags": [
-          "kernels"
-        ],
+        "tags": ["kernels"],
         "responses": {
           "200": {
             "description": "List of running kernels",
@@ -155,9 +139,7 @@
       },
       "post": {
         "summary": "Start a kernel and return the uuid",
-        "tags": [
-          "kernels"
-        ],
+        "tags": ["kernels"],
         "parameters": [
           {
             "name": "name",
@@ -204,9 +186,7 @@
       ],
       "get": {
         "summary": "Get kernel information",
-        "tags": [
-          "kernels"
-        ],
+        "tags": ["kernels"],
         "responses": {
           "200": {
             "description": "Information about the kernel",
@@ -218,9 +198,7 @@
       },
       "delete": {
         "summary": "Kill a kernel and delete the kernel id",
-        "tags": [
-          "kernels"
-        ],
+        "tags": ["kernels"],
         "responses": {
           "204": {
             "description": "Kernel deleted"
@@ -236,9 +214,7 @@
       ],
       "get": {
         "summary": "Upgrades the connection to a websocket connection.",
-        "tags": [
-          "channels"
-        ],
+        "tags": ["channels"],
         "responses": {
           "200": {
             "description": "The connection will be upgraded to a websocket."
@@ -254,9 +230,7 @@
       ],
       "post": {
         "summary": "Interrupt a kernel",
-        "tags": [
-          "kernels"
-        ],
+        "tags": ["kernels"],
         "responses": {
           "204": {
             "description": "Kernel interrupted"
@@ -272,9 +246,7 @@
       ],
       "post": {
         "summary": "Restart a kernel",
-        "tags": [
-          "kernels"
-        ],
+        "tags": ["kernels"],
         "responses": {
           "200": {
             "description": "Kernel interrupted",
@@ -295,9 +267,7 @@
     "/api/sessions": {
       "get": {
         "summary": "List available sessions",
-        "tags": [
-          "sessions"
-        ],
+        "tags": ["sessions"],
         "responses": {
           "200": {
             "description": "List of current sessions",
@@ -318,9 +288,7 @@
       },
       "post": {
         "summary": "Create a new session, or return an existing session if a session of the same name already exists.",
-        "tags": [
-          "sessions"
-        ],
+        "tags": ["sessions"],
         "parameters": [
           {
             "name": "session",
@@ -361,9 +329,7 @@
       ],
       "get": {
         "summary": "Get session",
-        "tags": [
-          "sessions"
-        ],
+        "tags": ["sessions"],
         "responses": {
           "200": {
             "description": "Session",
@@ -375,9 +341,7 @@
       },
       "patch": {
         "summary": "This can be used to rename the session.",
-        "tags": [
-          "sessions"
-        ],
+        "tags": ["sessions"],
         "parameters": [
           {
             "name": "model",
@@ -405,9 +369,7 @@
       },
       "delete": {
         "summary": "Delete a session",
-        "tags": [
-          "sessions"
-        ],
+        "tags": ["sessions"],
         "responses": {
           "204": {
             "description": "Session (and kernel) were deleted"
@@ -469,11 +431,7 @@
     },
     "KernelSpecFile": {
       "description": "Kernel spec json file",
-      "required": [
-        "argv",
-        "display_name",
-        "language"
-      ],
+      "required": ["argv", "display_name", "language"],
       "properties": {
         "language": {
           "type": "string",
@@ -506,10 +464,7 @@
           "description": "Help items to be displayed in the help menu in the notebook UI.",
           "items": {
             "type": "object",
-            "required": [
-              "text",
-              "url"
-            ],
+            "required": ["text", "url"],
             "properties": {
               "text": {
                 "type": "string",
@@ -527,10 +482,7 @@
     },
     "Kernel": {
       "description": "Kernel information",
-      "required": [
-        "id",
-        "name"
-      ],
+      "required": ["id", "name"],
       "properties": {
         "id": {
           "type": "string",
